--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.13",
+    "morgan": "^1.10.0",
     "node": "^16.3.0",
     "nodemailer": "^6.6.2",
     "path": "^0.12.7"
